<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">FollowMe</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="my_music" translatable="false">My Music</string>
    <string name="radio" translatable="false">Radio</string>
    <string name="action_users_settings" translatable="false">Users settings</string>
    <string name="action_rooms_settings" translatable="false">Rooms settings</string>
    <string name="action_speakers_settings" translatable="false">Speakers settings</string>
    <string name="action_doors_settings" translatable="false">Doors settings</string>
    <string name="modify" translatable="false">Modify</string>
    <string name="add" translatable="false"> + </string>
    <string name="addNewSpeakerMessageEthernet" translatable="false">Please connect playBox with ethernet</string>
    <string name="recognizingWait" translatable="false">wait for the recognizing...</string>
    <string name="and" translatable="false">and</string>
    <string name="speakerName" translatable="false">Speaker name</string>
    <string name="validate" translatable="false">Validate</string>
    <string name="password" translatable="false">Password</string>
    <string name="wifiTest" translatable="false">Wifi Test</string>
    <string name="errorWifiMessage" translatable="false">The wifi connection is not established</string>
    <string name="braceletSynchroMessage" translatable="false">Please press during 3 seconde the bracelet play button</string>
    <string name="userName" translatable="false">User name</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="synchroMessage" translatable="false">Please wait for synchronisation with the SmartBox</string>
    <string name="roomName" translatable="false">Room name</string>
    <string name="errorConnection" translatable="false">Connection to the database impossible</string>
    <string name="sensorSerial" translatable="false">Sensor serial number</string>
    <string name="braceletID" translatable="false">Bracelet ID</string>
    <string name="speakerIP" translatable="false">IP Address</string>
    <string name="play_pause">Play / Pause</string>

</resources>
