<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.followme.followme.MyMusicActivity"
    >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_my_music"
        android:title="@string/my_music"
        app:showAsAction="never" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_users_settings"
                android:title="@string/action_users_settings"
                app:showAsAction="never"/>
            <item android:id="@+id/action_rooms_settings"
                android:title="@string/action_rooms_settings"
                app:showAsAction="never"/>
            <item android:id="@+id/action_speakers_settings"
                android:title="@string/action_speakers_settings"
                app:showAsAction="never"/>
            <item android:id="@+id/action_doors_settings"
                android:title="@string/action_doors_settings"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>