<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainInformation">

        <ListView
            android:id="@+id/listRooms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:paddingBottom="40dp"
            android:paddingTop="30dp"
            >
        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/modificationRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify"/>

            <Button
                android:id="@+id/newRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"/>

        </LinearLayout>



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/errorConnection"
        android:visibility="invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/errorConnection"/>
        </RelativeLayout>
    <!-- The navigation drawer -->
</android.support.v4.widget.DrawerLayout>